--- a/.github/workflows/eks-deploy.yml
+++ b/.github/workflows/eks-deploy.yml
@@ -12,14 +12,14 @@ jobs:
         name: eks checkout
 
         steps:
-            - name: set git commit
+            - name: Set git commit
             id: commit
             uses: prompt/actions-commit-hash@v2 
             
-            - name: checkout code
+            - name: Checkout code
             uses: actions/checkout@v3
 
-            - name: configure AWS credentials
+            - name: Configure AWS credentials
             uses: aws-actions/configure-aws-credentials@v4
             with:
                 aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} # context is correct - problem is a github actions glitch - see: https://github.com/github/vscode-github-actions/issues/222
@@ -49,13 +49,13 @@ jobs:
                 ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
                 IMAGE_TAG: ${{ steps.commit.outputs.short }}
             run: |
-                bash ../../kubernetes-cluster/create-kubeconfig.sh
+                bash ../../eks-shell/create-kubeconfig.sh
 
             - name: Deploy to EKS
             run: |
-                bash ../../kubernetes-cluster/apply-deployment.sh
-                bash ../../kubernetes-cluster/apply-service.sh
-                bash ../../kubernetes-cluster/apply-ingress.sh
+                bash ../../eks-shell/apply-deployment.sh
+                bash ../../eks-shell/apply-service.sh
+                bash ../../eks-shell/apply-ingress.sh
 
 
 
