--- a/.github/workflows/eks-deploy.yml
+++ b/.github/workflows/eks-deploy.yml
@@ -1,65 +1,53 @@
-name: Deploy to EKS
-
+name: Node js app deploy to EKS
 on:
-    push: 
-        branches: [ eks ]
-    pull_request:
-        branches: [ eks ]
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-    eksDeploy:
-        runs-on: ubuntu-latest
-        name: eks checkout
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Get hash of Git commit
+      id: commit
+      uses: prompt/actions-commit-hash@v3
 
-        steps:
-            - name: Set git commit
-            id: commit
-            uses: prompt/actions-commit-hash@v2 
-            
-            - name: Checkout code
-            uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-            - name: Configure AWS credentials
-            uses: aws-actions/configure-aws-credentials@v4
-            with:
-                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} # context is correct - problem is a github actions glitch - see: https://github.com/github/vscode-github-actions/issues/222
-                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                aws-region: ${{ env.AWS_REGION }}
-                    
-            - name: Login to Amazon ECR
-            id: login-ecr
-            uses: aws-actions/amazon-ecr-login@v2
+    - name: Install kubectl
+      uses: azure/setup-kubectl@v3.0
+      with:
+        version: 'latest'
+      id: install
 
-            - name: Build image, tag image, and push to ECR repo
-            env:
-                ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-                ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
-                IMAGE_TAG: ${{ steps.commit.outputs.short }}
-            run: |
-                echo build image 
-                docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./Dockerfile .
-                echo push image to ECR
-                docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-            #   run: |
-            #     'aws ecr get-login-password --region <> | docker login username AWS --password-stdin <aws_account_id>.dkr.ecr.<region>.amazonaws.com
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
-            - name: Update kube config
-            env:
-                ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-                ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
-                IMAGE_TAG: ${{ steps.commit.outputs.short }}
-            run: |
-                bash ../../eks-shell/create-kubeconfig.sh
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
 
-            - name: Deploy to EKS
-            run: |
-                bash ../../eks-shell/apply-deployment.sh
-                bash ../../eks-shell/apply-service.sh
-                bash ../../eks-shell/apply-ingress.sh
+    - name: Build, tag, and push Docker image to Amazon ECR
+      env:
+        REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ${{ secrets.ECR_REPO_NAME }} # ecr repo
+        IMAGE_TAG: ${{ steps.commit.outputs.short }} # tag image with short version of git commit hash code
+      run: |
+        echo build and tag Docker image
+        docker build -t $REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./Dockerfile
+        echo push image to ECR repo
+        docker push $REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-
-
-# https://www.youtube.com/watch?v=lV6_7mLvJQA
-
-
-# checkout => configure aws credentials => login in to ECR => build/tag/push docker image to ECR repository => update kube config => deploy to EKS (apply the deployment and service manifests)
+    - name: Update kube config
+      run: aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }}
+    
+    - name: Deploy to EKS
+      run: |
+        kubectl apply -f trackr-deployment.yml
+        kubectl apply -f trackr-service.yml
