--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Job application tracking tool and dashboard deployed in a Kubernetes cluster on Amazon EKS.",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config ./webpack.config.js",
+    "start": "node ./server/server.js",
+    "dev": "NODE_ENV=development nodemon ./server/server.js & webpack-dev-server --open --hot",
+    "docker-dev:hot": "docker-compose -f docker-compose-dev-hot.yml up",
     "create-cluster": "bash ./kubernetes-cluster/create-cluster.sh",
     "delete-cluster": "bash ./kubernetes-cluster/delete-cluster.sh",
     "check-user": "bash ./kubernetes-cluster/check-aws-user.sh",
@@ -13,5 +17,31 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "F. Raisa Iftekher",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": [],
+  "dependencies": {
+    "axios": "^1.6.7",
+    "buffer-shims": "^1.0.0",
+    "pg": "^8.11.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
+    "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.0",
+    "react-router-dom": "^6.22.3",
+    "ret": "^0.5.0",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.2",
+    "webpack-hot-middleware": "^2.26.1"
+  }
 }
