--- a/.github/workflows/eks-deploy.yml
+++ b/.github/workflows/eks-deploy.yml
@@ -40,7 +40,7 @@ jobs:
         IMAGE_TAG: ${{ steps.commit.outputs.short }} # tag image with short version of git commit hash code
       run: |
         echo build and tag Docker image
-        docker build -t $REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./Dockerfile
+        docker build -t $REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         echo push image to ECR repo
         docker push $REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
