--- a/.github/workflows/eks-deploy.yml
+++ b/.github/workflows/eks-deploy.yml
@@ -1,9 +1,9 @@
 name: Node js app deploy to EKS
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "eks" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "eks" ]
 
 jobs:
   deploy:
