--- a/kube/catalog-store/catalog-deployment.yaml
+++ b/kube/catalog-store/catalog-deployment.yaml
@@ -2,10 +2,12 @@ apiVersion: apps/v1
 kind: Deployment
 
 metadata:
-  name: eks-catalog-store
+  name: eks-catalog-deployment
   namespace: catalog-namespace
   labels:
     app: eks-catalog-store
+    tier: backend
+    track: stable
 
 spec:
   replicas: 2 # number of pods
@@ -16,14 +18,20 @@ spec:
   selector:
     matchLabels:
       app: eks-catalog-store
+      tier: backend
+      track: stable
   template:
     metadata:
       labels:
         app: eks-catalog-store
+        tier: backend
+        track: stable
     spec:
       container:
-        - name: catalog-store
+        - name: eks-catalog-store
           image: 403188442647.dkr.ecr.us-east-2.amazonaws.com/catalog-store
           ports:
             - name: http
-              containerPort: 3000
+              containerPort: 8000
+
+# backend Deployment running 2 replicas of your eks-catalog-store application
