--- a/kube/ui-store/ui-service.yaml
+++ b/kube/ui-store/ui-service.yaml
@@ -1,14 +1,22 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: eks-ui-store
+  name: ui-service
   namespace: ui-namespace
   labels:
-    app: eks-ui-store
+    tier: frontend
   spec:
     selector:
-      app: eks-ui-store
+      app: eks-catalog-store
+      tier: frontend
     ports:
-      - port: 3000 # Service port = any port other pods use to access the Service
-        targetPort: # port the container accepts traffic on
+      - protocol: "TCP"
+        port: 3000 # Service port = any port other pods use to access the Service
+        targetPort: 3000 # port the container accepts traffic on
     type: LoadBalancer
+
+
+# the Service named "ui-service" routes traffic to Pods that have the labels app: eks-catalog-store and tier: backend
+# the DNS name is "catalog-service" aka value in the "name" field
+
+# The Pods in the frontend Deployment run a nginx image that is configured to proxy requests to the hello backend Service. Here is the nginx configuration file:
