--- a/.github/workflows/eks-deploy.yml
+++ b/.github/workflows/eks-deploy.yml
@@ -36,13 +36,19 @@ jobs:
     - name: Build, tag, and push Docker image to Amazon ECR
       env:
         REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY1: ${{ secrets.ECR_REPO_NAME1}} # ecr repo
+        ECR_REPOSITORY2: ${{ secrets.ECR_REPO_NAME2 }} # ecr repo
         ECR_REPOSITORY: ${{ secrets.ECR_REPO_NAME }} # ecr repo
         IMAGE_TAG: ${{ steps.commit.outputs.short }} # tag image with short version of git commit hash code
       run: |
         echo build and tag Docker image
         docker build -t $REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker build -t $REGISTRY/$ECR_REPOSITORY1:$IMAGE_TAG .
+        docker build -t $REGISTRY/$ECR_REPOSITORY2:$IMAGE_TAG .
         echo push image to ECR repo
         docker push $REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker push $REGISTRY/$ECR_REPOSITORY1:$IMAGE_TAG
+        docker push $REGISTRY/$ECR_REPOSITORY2:$IMAGE_TAG
 
     - name: Update kube config
       run: aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
