--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "buffer-shims": "^1.0.0",
+    "core-util-is": "^1.0.3",
     "cors": "^2.8.5",
     "esm": "^3.2.25",
     "pg": "^8.11.3",
@@ -34,6 +35,7 @@
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
+    "@node-loader/babel": "^2.1.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
@@ -45,7 +47,8 @@
     "style-loader": "^3.3.4",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2",
-    "webpack-hot-middleware": "^2.26.1"
+    "webpack-dev-server": "^5.0.4",
+    "webpack-hot-middleware": "^2.26.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
