--- a/services/carts/deployment.yaml
+++ b/services/carts/deployment.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Deployment
 metadata:
-  name: carts
+  name: carts-deployment
+  namespace: carts-namespace
   labels: # deployment label: app=tracker, component=carts, type=deploy, tier=backend
     app: tracker
     component: carts
