--- a/services/carts/service-account.yaml
+++ b/services/carts/service-account.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: catalog
+  namespace: catalog-namespace
   labels:
     name: catalog
     type: service
