--- a/services/catalog/service.yaml
+++ b/services/catalog/service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: catalog
+  name: catalog-service
+  namespace: catalog-namespace
   labels:
     app: tracker
     component: catalog
