--- a/services/ui/deployment.yaml
+++ b/services/ui/deployment.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Deployment
 metadata:
-  name: ui
+  name: ui-deployment
+  namespace: ui-namespace
   labels:
     app: tracker
     component: ui
@@ -25,6 +26,7 @@ spec:
         type: pods
         tier: frontend
     spec:
+      serviceAccountName: ui
       containers: 
         - name: ui
           image: 403188442647.dkr.ecr.us-east-2.amazonaws.com/ui-store
