--- a/services/ui/ui-configmap.yaml
+++ b/services/ui/ui-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: ui
+  name: ui-configMap
 data:
   ENDPOINTS_CATALOG: http://catalog
   ENDPOINTS_CARTS: http://carts
