--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-react": "^7.23.3",
     "@node-loader/babel": "^2.1.0",
     "babel-loader": "^9.1.3",
+    "bcrypt": "^5.1.1",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
