adding ExternalName Service for sql db

--- a/services/carts/deployment.yaml
+++ b/services/carts/deployment.yaml
@@ -34,6 +34,8 @@ spec:
           ports:
             - name: http
               containerPort: 8001
+              port: 8001
+              targetPort: 8001
               protocol: TCP
       #     resources:
       #       limits:
